Changelog
=========

1.0a2 - Unreleased
------------------

* (Briefly) document the plone.app.folder.tests.bbb usage.
  [wichert]


1.0a1 - Released May 7, 2009
----------------------------

* Initial release as factored out from `plone.folder`.
  [witsch]
